--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,6 @@
     <string name="previous_button_text">Previous</string>
     <string name="next_button_text">Next</string>
 
-    <string name="nombre_cod">Luisa Maria Cardenas Lopez, 1823494</string>
+    <string name="name_code">Luisa Maria Cardenas Lopez, 1823494</string>
 
 </resources>
